2003-08-22  Breda McColgan  <breda.mccolgan@sun.com>

	* wireless/docs/C/wireless.xml: updated references to figures
	* wireless/docs/C/wireless-C.omf: updated date and version number
	* wireless/docs/C/l10n.txt: updated references to figures
	* wireless/docs/C/figures/wireless_applet.png: deleted this file
	* wireless/docs/C/figures/wireless_applet_conn.png: added this file
	* wireless/docs/C/figures/wireless_applet_no_conn.png: added this file

2003-08-10  Bastien Nocera  <hadess@hadess.net>

	* wireless-applet.c: (wireless_applet_draw): make the applet have the
	right display straight away, left-overs from the GNOME1 applet...

2003-08-07  Bastien Nocera  <hadess@hadess.net>

	* wireless-applet.c: (setup_widgets), (change_size_cb),
	(change_orient_cb), (wireless_applet_new): make sure the pixmap
	is updated when changing the panel's orientation or size

2003-08-07  Breda McColgan  <breda.mccolgan@sun.com>

	* wireless/docs: created this new directory for GNOME 2.4
	* wireless/docs/C: created this new directory for GNOME 2.4
	* wireless/docs/C/figures: created this new directory for GNOME 2.4
	* wireless/docs/C/wireless.xml: created this new file for GNOME 2.4
	* wireless/docs/C/wireless-C.omf: created this new file for GNOME 2.4
	* wireless/docs/C/legal.xml: added this new file for GNOME 2.4
	* wireless/docs/C/l10n.txt: created this new file for GNOME 2.4
	* wireless/docs/C/figures/wireless_applet.png: created this new file for GNOME 2.4

2003-08-06  Bastien Nocera  <hadess@hadess.net>

	* wireless-applet.c: (wireless_applet_draw),
	(wireless_applet_update_state), (wireless_applet_load_theme),
	(wireless_applet_destroy), (setup_widgets), (change_orient_cb):
	Massive cleanup to remove the over-engineered (for our use) theming
	code and associated cleanups

2003-08-06  Bastien Nocera  <hadess@hadess.net>

	* wireless-applet.c: (wireless_applet_load_theme),
	(show_warning_dialog): removed dead code

2003-07-22  Malcolm Tredinnick <malcolm@commsecure.com.au>
