@@ -1,3 +1,8 @@
+Mon Sep 15 15:13:29 2003  George Lebl <jirka@5z.com>
+
+	* wireless-applet.c: When started in locked down mode, hide
+	  the preferences item
+
 2003-08-22  Breda McColgan  <breda.mccolgan@sun.com>
 
 	* wireless/docs/C/wireless.xml: updated references to figures
